<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/direction"
                style="@style/Base.TextAppearance.AppCompat.Subhead"/>

        </RelativeLayout>

        <RadioGroup
            android:id="@+id/radio_group_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <RadioButton
                android:id="@+id/vertical"
                android:checked="true"
                android:text="@string/vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Subhead"/>
            <RadioButton
                android:id="@+id/horizontal"
                android:text="@string/horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Subhead"/>


        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/hint_foreground_material_light"/>

    <com.github.pxsrt.view.ComparatorEditView
        android:id="@+id/comparator_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/hint_foreground_material_light"/>

    <com.github.pxsrt.view.PredicateEditView
        android:id="@+id/predicate_edit_view_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:titleText="@string/from_predicate_title"/>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/hint_foreground_material_light"/>

    <com.github.pxsrt.view.PredicateEditView
        android:id="@+id/predicate_edit_view_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:titleText="@string/to_predicate_title"/>

</merge>