<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead.Inverse"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <io.github.pxsrt.widget.ComponentSpinner
                android:id="@+id/component_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/abc_spinner_mtrl_am_alpha"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordering"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead.Inverse" />

        </RelativeLayout>

        <RadioGroup
            android:id="@+id/radio_group_comparator_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <RadioButton
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ascending_order"
                android:text="@string/ascending"
                style="@style/Base.TextAppearance.AppCompat.Subhead.Inverse" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descending_order"
                android:text="@string/descending"
                style="@style/Base.TextAppearance.AppCompat.Subhead.Inverse" />

        </RadioGroup>

    </LinearLayout>

</merge>