<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Spinner
        android:id="@+id/spinner_component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"/>

    <Spinner
        android:id="@+id/spinner_predicate_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:onClick="setPrimaryField">

        <TextView
            android:id="@+id/primary_text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upper_bound"
            />

        <TextView
            android:id="@+id/primary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_number"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Space
        android:layout_width="10dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/secondary_text_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:onClick="setSecondaryField">

        <TextView
            android:id="@+id/secondary_text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lower_bound"/>

        <TextView
            android:id="@+id/secondary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_number"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>