<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_predicate_title"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <io.github.pxsrt.widget.ComponentSpinner
                android:id="@+id/component_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/abc_spinner_mtrl_am_alpha" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="end">

            <CheckBox
                android:id="@+id/check_box_above"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/above"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/text_view_above"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/abc_edit_text_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_number"/>

            <SeekBar
                android:id="@+id/seek_bar_above"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="end">

            <CheckBox
                android:id="@+id/check_box_below"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/below"
                style="@style/Base.TextAppearance.AppCompat.Subhead" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/text_view_below"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/abc_edit_text_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_number"/>

            <SeekBar
                android:id="@+id/seek_bar_below"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</merge>